# slippi-Ishiiruka

./: build-appimage.sh  build-linux.sh  build-mac.sh
.github/workflows/: pr-build.yml  release.yml
Data/Sys/GameSettings/: GALE01r2.ini
Source/Core/: CMakeLists.txt
Source/Core/Common/: Version.cpp
Source/Core/Core/: CMakeLists.txt  Core.vcxproj  NetPlayProto.h
Source/Core/Core/HW/: EXI_DeviceSlippi.cpp  EXI_DeviceSlippi.h  SystemTimers.cpp
Source/Core/Core/Slippi/: SlippiMatchmaking.cpp  SlippiNetplay.cpp  SlippiNetplay.h  SlippiPad.cpp  SlippiPad.h  SlippiSpectate.cpp  SlippiUser.h
Source/Core/DolphinNoGUI/: CMakeLists.txt
Source/Core/DolphinWX/: CMakeLists.txt  Dolphin.vcxproj  Frame.h  Main.cpp  X11Utils.cpp
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp
Source/Core/InputCommon/ControllerInterface/Pipes/: Pipes.cpp  Pipes.h
Source/Core/UICommon/: UICommon.h
Source/Core/VideoCommon/: VideoBackendBase.cpp
